// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacebookIntegrationInstagramAds actions fetchAds() should fetch ads 1`] = `
[
  {
    "payload": true,
    "type": "SET_FACEBOOK_ADS_LOADING",
  },
  {
    "payload": {
      "1": {
        "ads": {
          "postid1": {
            "is_active": true,
            "name": "ad 1",
          },
        },
      },
    },
    "type": "SET_FACEBOOK_ADS_INTERNALS",
  },
  {
    "payload": false,
    "type": "SET_FACEBOOK_ADS_LOADING",
  },
]
`;

exports[`FacebookIntegrationInstagramAds actions updateAd() should activate ad 1`] = `
[
  {
    "payload": "postid1",
    "type": "ADD_LOADING_FACEBOOK_AD",
  },
  {
    "payload": {
      "id": "postid1",
      "integrationId": 1,
      "isActive": true,
    },
    "type": "UPDATE_ACTIVE_FACEBOOK_AD",
  },
  {
    "payload": "postid1",
    "type": "REMOVE_LOADING_FACEBOOK_AD",
  },
]
`;

exports[`FacebookIntegrationInstagramAds actions updateAd() should deactivate ad 1`] = `
[
  {
    "payload": "postid1",
    "type": "ADD_LOADING_FACEBOOK_AD",
  },
  {
    "payload": {
      "id": "postid1",
      "integrationId": 1,
      "isActive": false,
    },
    "type": "UPDATE_ACTIVE_FACEBOOK_AD",
  },
  {
    "payload": "postid1",
    "type": "REMOVE_LOADING_FACEBOOK_AD",
  },
]
`;
